<resources>
    <string name="app_name">Khrogaty</string>
    <string name="places">Places For Going Out</string>
    <string name="places_details">agree that we are living in</string>
    <string name="next">Next > </string>
    <string name="prev"><![CDATA[< Prev]]></string>
    <string name="restaurant"><![CDATA[Restaurants & Coffee Shops]]></string>
    <string name="start_button">Start</string>
    <string name="what">What Do I Do?</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rest">Restaurants</string>
    <string name="find_places">Find Places</string>
    <string name="search">Search</string>
    <string name="things">Things To Do</string>
    <string name="search_any">Search for any places</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
